# lightning_sample

./: .gitignore  AGENTS.md  main.py  pyproject.toml
image_classification/: README.md  requirements.txt  train.py
image_classification/configs/: config.yaml
image_classification/configs/augmentation/: basic.yaml
image_classification/configs/data/: cifar10.yaml
image_classification/configs/model/: efficientnet.yaml  resnet.yaml
image_classification/configs/optimizer/: adamw.yaml
image_classification/configs/scheduler/: cosine.yaml  plateau.yaml
image_classification/src/: __init__.py  callbacks.py  datamodule.py  dataset.py  model.py  utils.py  visualization.py
