[project]
name = "claude-lightning-templeate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "albumentations>=2.0.8",
    "grad-cam>=1.5.5",
    "hydra-core>=1.3.2",
    "lightning>=2.6.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "omegaconf>=2.3.0",
    "pandas>=2.3.3",
    "rich>=14.2.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "timm>=1.0.22",
    "torch>=2.9.1",
    "torchmetrics>=1.8.2",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
    "wandb>=0.23.1",
]
